replaced picturebox with menu strip, optimized code
replaced the old, unattractive picture box with a menu strip to make navigation easier and allow for future design improvements.

optimized code: redone language change code, replaced clearing with application restart for better compatibility and stability.

Removed automatic retrieval of both public and local IP addresses upon loading. You can still click the button to retrieve either your public or local IP address.

--- a/PalworldServerManager/PalworldServerManager/PalworldServerManager.csproj
+++ b/PalworldServerManager/PalworldServerManager/PalworldServerManager.csproj
@@ -71,6 +71,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form_RCON.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_RCON.Designer.cs">
+      <DependentUpon>Form_RCON.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form_ServerSettings.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -84,6 +90,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.zh-Hans.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form_RCON.resx">
+      <DependentUpon>Form_RCON.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form_RCON.zh-Hans.resx">
+      <DependentUpon>Form_RCON.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form_ServerSettings.resx">
       <DependentUpon>Form_ServerSettings.cs</DependentUpon>
