fixed RCON timeout issue + added rcon form on load settings
Added a refresh player list loop(10 seconds) to keep the RCON client active. This way it updates the server player list every 10 seconds, and keeps the RCON client running without timeouts.

RCON form now saves ip, port and password when connect rcon button is clicked.

--- a/PalworldServerManager/PalworldServerManager/App.config
+++ b/PalworldServerManager/PalworldServerManager/App.config
@@ -13,6 +13,15 @@
             <setting name="Seleceted_Language" serializeAs="String">
                 <value />
             </setting>
+            <setting name="Saved_RconIP" serializeAs="String">
+                <value>127.0.0.1</value>
+            </setting>
+            <setting name="Saved_RconPort" serializeAs="String">
+                <value>25575</value>
+            </setting>
+            <setting name="Saved_RconPassword" serializeAs="String">
+                <value />
+            </setting>
         </PalworldServerManager.Properties.Settings>
     </userSettings>
 </configuration>
