--- a/PalworldServerManager/PalworldServerManager/Properties/Settings.settings
+++ b/PalworldServerManager/PalworldServerManager/Properties/Settings.settings
@@ -5,5 +5,14 @@
     <Setting Name="Seleceted_Language" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="Saved_RconIP" Type="System.String" Scope="User">
+      <Value Profile="(Default)">127.0.0.1</Value>
+    </Setting>
+    <Setting Name="Saved_RconPort" Type="System.String" Scope="User">
+      <Value Profile="(Default)">25575</Value>
+    </Setting>
+    <Setting Name="Saved_RconPassword" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
