RCON is now able to be accessed remotely.
RCON is now able to be accessed remotely. commands, server names, player names do need to be ASCII printable character for it to work properly.

--- a/PalworldServerManager/PalworldServerManager/App.config
+++ b/PalworldServerManager/PalworldServerManager/App.config
@@ -22,6 +22,9 @@
             <setting name="Saved_rconPassword" serializeAs="String">
                 <value />
             </setting>
+            <setting name="Saved_rconAutpUpdatePlayerList" serializeAs="String">
+                <value>False</value>
+            </setting>
         </PalworldServerManager.Properties.Settings>
     </userSettings>
 </configuration>
