--- a/PalworldServerManager/PalworldServerManager/Properties/Settings.settings
+++ b/PalworldServerManager/PalworldServerManager/Properties/Settings.settings
@@ -14,5 +14,8 @@
     <Setting Name="Saved_rconPassword" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="Saved_rconAutpUpdatePlayerList" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
