--- a/PalworldServerManager/PalworldServerManager/PalworldServerManager.csproj
+++ b/PalworldServerManager/PalworldServerManager/PalworldServerManager.csproj
@@ -40,9 +40,7 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
-    <PackageReference Include="RconSharp" Version="2.0.1" />
-    <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
+    <PackageReference Include="PalWorld.Networking" Version="1.0.2" />
   </ItemGroup>
   <ItemGroup>
     <Compile Update="Properties\Settings.Designer.cs">
