Added savable on cmd crash restart

--- a/PalworldServerManager/PalworldServerManager/App.config
+++ b/PalworldServerManager/PalworldServerManager/App.config
@@ -25,6 +25,9 @@
             <setting name="Saved_rconAutpUpdatePlayerList" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="Saved_OnCMDCrashRestart" serializeAs="String">
+                <value>False</value>
+            </setting>
         </PalworldServerManager.Properties.Settings>
     </userSettings>
 </configuration>
