--- a/PalworldServerManager/PalworldServerManager/Properties/Settings.settings
+++ b/PalworldServerManager/PalworldServerManager/Properties/Settings.settings
@@ -17,5 +17,8 @@
     <Setting Name="Saved_rconAutpUpdatePlayerList" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="Saved_OnCMDCrashRestart" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
