--- a/PalworldServerManager/PalworldServerManager/PalworldServerManager.csproj
+++ b/PalworldServerManager/PalworldServerManager/PalworldServerManager.csproj
@@ -41,6 +41,7 @@
     <Content Include="chickenimage (1).ico" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="PalWorld.Networking" Version="1.0.2" />
   </ItemGroup>
   <ItemGroup>
